--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@unocss/reset": "^66.1.3",
     "@waline/client": "^3.5.7",
     "astro": "^5.8.1",
+    "astro-auto-import": "^0.4.4",
     "astro-pure": "1.3.0",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
@@ -38,6 +39,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "eslint": "^9.28.0",
     "eslint-plugin-astro": "^1.3.1",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "rollup-plugin-visualizer": "^6.0.1",
